processed/jira/txt/LU/LU-19432.txt
Key:        LU-19432
Summary:    parallel-scale test_connectathon: general tests failed
Link:       https://jira.whamcloud.com/browse/LU-19432
Type:       Bug
Priority:   Medium
Status:     Resolved
Resolution: Cannot Reproduce
Assignee:   Xinxia Qu
Reporter:   Maloo
Created:    Thu, 25 Sep 2025 23:59:30 +0000
Updated:    Thu, 25 Dec 2025 12:22:31 +0000
Resolved:   Wed, 10 Dec 2025 13:05:35 +0000

--- Environment ---
RHEL 10.0 client

--- Description ---
This issue was created by maloo for jianyu 

This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/fbbb3725-e066-4e95-a534-341860b98d47

test_connectathon failed with the following error:

GENERAL TESTS: directory /mnt/lustre/d0.connectathon
if test ! -x runtests; then chmod a+x runtests; fi
cd /mnt/lustre/d0.connectathon; rm -f Makefile runtests runtests.wrk *.sh *.c mkdummy rmdummy nroff.in makefile.tst
cp Makefile runtests runtests.wrk *.sh *.c mkdummy rmdummy nroff.in makefile.tst /mnt/lustre/d0.connectathon

Small Compile
stat.c: In function 'main':
stat.c:40:17: error: implicit declaration of function 'exit' [-Wimplicit-function-declaration]
   40 |                 exit(1);
      |                 ^~~~
stat.c:6:1: note: include '' or provide a declaration of 'exit'
    5 | #include 
  +++ |+#include 
    6 | 
stat.c:60:18: error: implicit declaration of function 'isdigit' [-Wimplicit-function-declaration]
   60 |         else if (isdigit(c))
      |                  ^~~~~~~
stat.c:6:1: note: include '' or provide a declaration of 'isdigit'
    5 | #include 
  +++ |+#include 
    6 | 
Command exited with non-zero status 1
0.01user 0.01system 0:00.04elapsed 72%CPU (0avgtext+0avgdata 22380maxresident)k
35352inputs+16outputs (85major+1560minor)pagefaults 0swaps
general tests failed
 parallel-scale test_connectathon: @@@@@@ FAIL: connectathon failed: 1 

Test session details:

clients: https://build.whamcloud.com/job/lustre-reviews/116858 - 6.12.0-55.33.1.el10_0.x86_64

servers: https://build.whamcloud.com/job/lustre-reviews/116858 - 4.18.0-553.71.1.el8_lustre.x86_64

>

VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV

parallel-scale test_connectathon - connectathon failed: 1

--- Comment (pjo, Wed, 10 Dec 2025 13:05:35 +0000) ---
Should no longer occur

--- Comment (gerrit, Fri, 5 Dec 2025 13:30:50 +0000) ---
"Michael Kvardakov " merged in patch https://review.whamcloud.com/c/build/toolkit/+/62886/

Subject: LU-19432 update connectathon for el10

Project: build/toolkit

Branch: master

Current Patch Set: 

Commit: 2d1b2d61ac26718e152840d4d1c1fd4dd06be9b5

--- Comment (gerrit, Fri, 5 Dec 2025 03:28:26 +0000) ---
"Xinxia Qu " uploaded a new patch: https://review.whamcloud.com/c/build/toolkit/+/62886

Subject: LU-19432 update connectathon for el10

Project: build/toolkit

Branch: master

Current Patch Set: 1

Commit: 2db826c3f2aee324818ab347a91930f7ecaade76

--- Comment (JIRAUSER20209, Wed, 3 Dec 2025 03:02:09 +0000) ---
1. In the toolkit repository, the file list of Connectathon is as follows:

[root@localhost connectathon]# ls
connectathon-1.20.tar.gz  connectathon.spec  Makefile
 
[root@localhost connectathon]# pwd
toolkit/benchmark/connectathon

2. We only maintain a compressed package, not the source code itself.  

According to the `connectathon.spec` file, the original source code path is:  http://git.linux-nfs.org/?p=steved/cthon04.git

This is our most recent relevant modification, during which Connectathon was also updated from version 1.19 to 1.20:

[root@localhost connectathon]# git log connectathon.spec
commit 2c805536d23423e4da136ff3c2b8bbb163a947c5
Author: Alex Deiter 
Date:   Fri Nov 18 18:06:02 2022 +0400

    DCO-9179 fix connectathon times out with segfault

    * fix connectathon times out with segfault (DCO-9179)
    * added missed dependencies (libtirpc-dev make gcc pkg-config)

    Change-Id: I01b153645f383651a43bb8481d13d0d39c99ef48
    Signed-off-by: Alex Deiter 
    Reviewed-on: https://review.whamcloud.com/c/build/toolkit/+/49189
    Tested-by: jenkins 
    Reviewed-by: Michael Kvardakov 

3. It appears that the source repository has already fixed the GCC upgrade-induced compatibility issue in March 2025:

http://git.linux-nfs.org/?p=steved/cthon04.git;a=commit;h=60e845afe6d80ec0801ac14865aa040f54bf2a83

 

So, here's what we plan to do next: merge the corresponding patch, upgrade connectathon-1.20.tar.gz to connectathon-1.21.tar.gz, and then adapt it to the relevant Jenkins build as well as upgrade the connectathon-1.21 RPM package.

--- Comment (yujian, Tue, 2 Dec 2025 18:15:42 +0000) ---
Hi xqu,

From the toolkit build log https://build.whamcloud.com/view/lab/job/toolkit/853/arch=x86_64,distro=el10/consoleFull, I found the following repo:

ssh://jenkins@review.whamcloud.com:29418/build/toolkit

Please replace "jenkins" with your name.

--- Comment (JIRAUSER20209, Tue, 2 Dec 2025 14:37:00 +0000) ---
Hi yujian , I'm analyzing this issue using the Connectathon RPM package corresponding to the test case. Could you let me know if there's a repository maintained by us for its source code?

--- Comment (JIRAUSER20209, Tue, 2 Dec 2025 14:32:52 +0000) ---
Basic Conclusion

This issue appears to be a C code compatibility problem caused by the GCC version upgrade on RHEL 10. The new GCC version uses the stricter C17 standard by default, which triggers compilation errors (such as implicit function declaration) when building Connectathon source files. Typically, these issues can be resolved by compiling with older standards like C89.

Version Information

[root@localhost ~]# uname -r
6.12.0-55.12.1.el10_0.x86_64
[root@localhost ~]# cat /etc/rocky-release
Rocky Linux release 10.0 (Red Quartz)
[root@localhost ~]# gcc -v 2>&1 | grep "gcc version"
gcc version 14.3.1 20250617 (Red Hat 14.3.1-2) (GCC)

Causal Path

1. The `test_connectathon()` case executes the test command: `bash ./runtests -N 2 -g -f /mnt/lustre/d0.connectathon`;

2. The test command triggers the compilation of `connectathon/general/stat.c` (and `connectathon/general/large.c`);

3. The new GCC version on RHEL 10 detects issues like implicit function declarations in `stat.c`, leading to compilation errors.

Self-Testing Method

On a RHEL 10.0 or Rocky 10.0 environment, download the Connectathon package corresponding to the test case:

# Download connectathon package
wget https://build.whamcloud.com/view/lab/job/toolkit/853/arch=x86_64,distro=el10/artifact/_topdir/RPMS/x86_64/connectathon-1.20-1.wc1.x86_64.rpm
mkdir conn
rpm2cpio connectathon-1.20-1.wc1.x86_64.rpm | cpio -idmv -D ./conn

# Note: This issue is unrelated to Lustre, so there's no need to actually mount Lustre.
mkdir -p /mnt/lustre/d0.connectathon

# Execute the runtests script to reproduce the issue
cd conn/opt/connectathon
bash ./runtests -N 2 -g -f /mnt/lustre/d0.connectathon

Fix Methods
Option 1. Modify Source Files Directly

Add the following header files to `stat.c`:

#include 
#include 

Note: Apply similar modifications to `large.c` by referring to its own error messages.

Option 2. Modify Compilation Parameters

Manually specify `-std=gnu89` by changing the following line in `connectathon/general/runtests.wrk`:

CFLAGS="$CFLAGS -w"

to:

CFLAGS="$CFLAGS -w -std=gnu89"

--- Comment (lixi_wc, Mon, 1 Dec 2025 03:17:42 +0000) ---
xqu Would you please take a look?

--- Comment (lixi_wc, Mon, 1 Dec 2025 03:17:20 +0000) ---
This feels like a compiler version/environment problem, rather than a file system problem. We need to confirm RHEL10 can compile connectathon software properly.

git clone git@github.com:dkruchinin/cthon-nfs-tests.git

--- Comment (yujian, Sun, 30 Nov 2025 09:17:03 +0000) ---
Also failed on RHEL 10.1 client: https://testing.whamcloud.com/test_sets/a9dd4f9d-8571-41cc-8bdf-7b67ffc5274a
